tests/paczka1/fuzzy1/25213171.err
Error in line 2: p2dmb S807 26,1
Error in line 8: hn0pH S730 98,99
Error in line 4: S807 A462 71,0
Error in line 11: eH5f5elXke A999 175,4
Error in line 16: hn0pH S730 8,,
Error in line 21: p2dmb A999 55,9
Error in line 38: eH5f5elXke A462 722,9
